--- a/frontend-finance/src/App.css
+++ b/frontend-finance/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.finance{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.header{
+    display: block;
+    justify-content: center;
+    align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home_btn{
+    gap: 10px;
+    width: 33.3%;
+    border-radius: 25px;
+}
+.graph_btn{
+    gap: 10px;
+    width: 33.3%;
+    border-radius: 25px;
+}
+.profile_btn{
+    gap: 10px;
+    width: 33.4%;
+    border-radius: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.content_home{
+    background-color: rgb(255, 0, 0);
+    border-radius: 15px;
+    margin-left: 35%;
+    width: 30%;
+    display: grid;
+    position: relative;
+    top: 50px;
+    justify-content: center;
+    align-items: center;
 }
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.add_btn{
+    height: 50px;
+    width: 100px;
+    border-radius: 100px;
+    margin-bottom: 10px;
+    margin-left: 35%;
 }
