--- a/frontend-finance/src/index.css
+++ b/frontend-finance/src/index.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 :root{
-  background-image: url('../public/c144bcf5-8886-4245-942d-69be2d081738.png');
+  background-image: url('../public/financial-investment-concept-double-exposure-city-night-stack-coins-finance-investor_488220-396.avif');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
