--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,9 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-:root{
-  background-image: url('../public/financial-investment-concept-double-exposure-city-night-stack-coins-finance-investor_488220-396.avif');
-  background-repeat: repeat;
-  background-position: center;
-  background-size: cover;
+body {
+  margin: 0px;
+  margin-right: auto;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
